Fixed sphere being stretched due to aspect ratio of camera not matching renderer

--- a/portfolio/src/app/components/canvas/displacement-sphere.module.css
+++ b/portfolio/src/app/components/canvas/displacement-sphere.module.css
@@ -4,7 +4,7 @@
     inset: 0;
     opacity: 0;
     transition: opacity 3s ease;
-    z-index: -10;
+    /* z-index: -10; */
 }
 
 .canvas[data-visible="true"] {
